corpus/comments.txt
=======
comment
=======

# anything else here should be ignored

# """
# line 1
# line 2
# """

---

(program
  (comment)
  (comment)
  (comment)
  (comment)
  (comment))
  
===================================
hashtag in a string (not a comment)
===================================

"# this is not a comment, it's just a string"
'is this a charlist? # no comment!'

---

(program
  (string)
  (charlist))

==============
nested comment
==============

# even with # this is only 1 comment
# "inside a commented out # string"

---

(program
  (comment)
  (comment))

===========
eol comment
===========

1 # after a value
"this is a string" # followed by a comment

---

(program
  (integer) (comment)
  (string) (comment))
