corpus/data_structures.txt
===========
empty tuple
===========

{}
{ }
{
}

---

(program (tuple) (tuple) (tuple))

=======
1-tuple
=======

{:ok}
{ :ok }
{:ok,}
{
  :ok
}
{
  :ok,
}

---

(program
  (tuple (atom))
  (tuple (atom))
  (tuple (atom))
  (tuple (atom))
  (tuple (atom)))

============
bigger tuple
============

{:hello, :world}
{:hello, :world,}
{1, 2, 3}

---

(program
  (tuple (atom) (atom))
  (tuple (atom) (atom))
  (tuple (integer) (integer) (integer)))
  
=============
nested tuples
=============

{{}}

---

(program (tuple (tuple)))

==========
empty list
==========

[]
[ ]
[
]

---

(program (list) (list) (list))

====
list
====

[1, 2, 3]
[1, 2, 3,]
[
  1,
  2,
  3,
]

---

(program
  (list (integer) (integer) (integer))
  (list (integer) (integer) (integer))
  (list (integer) (integer) (integer)))

================================
list in [ head | tail ] notation
================================

[1|[]]
[[]|[]]
[1|[:ok|[]]]
[ 1 | [ 2 , 3 ] ]

---

(program
  (list
    (head (integer))
    (tail (list)))
  (list
    (head (list))
    (tail (list)))
  (list
    (head (integer))
    (tail
      (list
        (head (atom))
        (tail (list)))))
  (list
    (head (integer))
    (tail (list (integer) (integer)))))
    
==============================
keyword list as list of tuples
==============================

[{:a, 1}, {:b, 2}]

---

(program
  (list
    (tuple (atom) (integer))
    (tuple (atom) (integer))))

============
keyword list
============

[hello: "world"]
[a: 1, b: 2]
# TODO ["exit on close": true]

---

(program
  (list
    (keyword (string)))
  (list
    (keyword (integer))
    (keyword (integer)))
  (comment))
